fix page content overflow behavior

--- a/client/src/Book.css
+++ b/client/src/Book.css
@@ -40,7 +40,7 @@
 .page .contentBox {
   max-width: 80%;
   max-height: 95%;
-  overflow-y: scroll;
+  overflow-y: auto;
   margin: 0 auto;
   padding: 1rem 1.5rem;
   background: #ffffff6f;
